# mapped-file

./: Cargo.toml  README.md
src/: err.rs  ext.rs  ffi.rs  file.rs  flags.rs  hugetlb.rs  lib.rs  ring.rs  uniq.rs
src/file/: managed.rs  memory.rs  raw.rs  unmanaged.rs
src/file/memory/: hugetlb.rs
src/ring/: buffer.rs
