[package]
name = "mapped-file"
description = "Construct a memory mapping over any file object"
keywords = ["unix", "mmap", "generic", "file", "fd"]
version = "0.0.4"
edition = "2021"
repository="https://github.com/notflan/mapped-file"
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Add support for file-descriptor operations other than simply mapping
# TODO: XXX: Incomplete, will be enabled by default when complete
file=[]

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.132"
memchr = "2.5.0"
